--- a/package.json
+++ b/package.json
@@ -23,10 +23,18 @@
     "autoprefixer": "^9.8.6",
     "chalk": "^4.1.0",
     "css-loader": "^4.2.2",
+    "file-loader": "^6.1.0",
+    "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "node-sass": "^4.14.1",
     "opn": "^6.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-scss": "^3.0.2",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
